syntax = "proto3";

package product;
option go_package = "./pb/product/";

service ProductService {
  rpc AddProduct (AddProductRequest) returns (AddProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
  rpc ListAllProducts (ListAllProductsRequest) returns (ListAllProductsResponse);
  rpc GetProductById (GetProductByIdRequest) returns (GetProductByIdResponse);
}

message AddProductRequest {
  string name = 1;
  float price = 2;
  int32 quantity = 3;
}

message AddProductResponse {
  int64 id = 1;
}

message UpdateProductRequest {
  int64 id = 1;
  string name = 2;
  float price = 3;
  int32 quantity = 4;
}

message UpdateProductResponse {
  bool success = 1;
}

message DeleteProductRequest {
  int64 id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message ListAllProductsRequest {}

message ListAllProductsResponse {
  repeated Product products = 1;
}

message Product {
  int64 id = 1;
  string name = 2;
  float price = 3;
  int32 quantity = 4;
}

message GetProductByIdRequest {
  int64 id = 1;
}

message GetProductByIdResponse {
  int64 id = 1;
  string name = 2;
  float price = 3;
  int32 quantity = 4;
}
